gcc/testsuite/g++.dg/cpp0x/pr60215.C
// PR c++/60215
// { dg-do compile { target c++11 } }

struct A
{
  void foo();
  int i : foo;  // { dg-error "width" }
};
